--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,17 @@ _site/
 
 # Ignore the directory for local files during development
 local/
+_drafts/
 
 # Ignore the Gemfile that is generated
 Gemfile.lock
 
-# Ingore files created by npm
+# Ignore files created by npm
 node_modules
 package-lock.json
+
+# Ignore some _pages
+_pages/cv.md
+
+# Ignore dotfiles
+.*
