--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Shuan"
 title_separator          : "-"
-name                     : &name "Shuan"
+name                     : &name "Shuan Er"
 description              : &description "shuan's description"
 url                      : https://shuaneryx.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -22,22 +22,22 @@ repository               : "shuaneryx.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Shuan"
+  name             : "Shuan Er"
   pronouns         : # example: "she/her"  
-  bio              : "shuan's short biography"
+  bio              : "BSc. (Hons) | NUS </br> Research Officer </br> Temasek Life Sciences Laboratory"
   location         : "Singapore"
-  employer         : "shuan's employer"
+  employer         : # "shuan's employer"
   uri              : # URL
-  email            : "shuan@example.org" 
-
+  email            : "shuan_er@yahoo.com.sg"
+  
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=u_0rnqkAAAAJ"
   impactstory      : # URL
   orcid            : "https://orcid.org/0000-0002-5315-5474"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
+  pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  researchgate     : "https://www.researchgate.net/profile/Shuan-Er"
   scopus           : # URL
 
   # Repositories and software development
@@ -49,7 +49,7 @@ author:
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # "bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
@@ -218,7 +218,7 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
-  portfolio:
+  projects:
     output: true
     permalink: /:collection/:path/
   talks:
@@ -264,10 +264,10 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _portfolio
+  # _projects
   - scope:
       path: ""
-      type: portfolio
+      type: projects
     values:
       layout: single
       author_profile: true
